Add Dockerfile and externalize config for Railway deploy